import type { Flight, Trip } from './types';

const AIRPORT_DESTINATION_MAP: Record<string, string> = {
  MPH: 'Boracay, Philippines',
  KLO: 'Boracay, Philippines',
  CEB: 'Cebu, Philippines',
  MNL: 'Manila, Philippines',
  PPS: 'Palawan, Philippines',
  USU: 'Coron, Palawan',
  DAD: 'Da Nang, Vietnam',
...
